--- a/ceph-setup.yml
+++ b/ceph-setup.yml
@@ -2,6 +2,4 @@
 - name: install
   hosts: all
   roles:
-    - 01-create-sudo-user
-    - 02-install-modules
-    - 03-configure-hosts-file
+    - 01-install-packages
