--- a/roles/02-ceph-preconfig/tasks/main.yml
+++ b/roles/02-ceph-preconfig/tasks/main.yml
@@ -30,6 +30,23 @@
     destination_port: 6789
     jump: ACCEPT
 
+- name: Set timezone to Asia/Shanghai
+  timezone:
+    name: Asia/Shanghai
+
+- name: Generate SSH keys
+  shell: ssh-keygen -b 2048 -t rsa -f /root/.ssh/id_rsa -q -N ""
+  args:
+    creates: /root/.ssh/id_rsa
+
+- name: Set authorized key taken from file
+  authorized_key:
+    user: root
+    state: present
+    key: "{{ lookup('file', '/root/.ssh/id_rsa.pub') }}"
+
+
+
 - name: config /etc/ntp.conf
   lineinfile:
     path: /etc/ntp.conf
