--- a/roles/02-ceph-preconfig/tasks/main.yml
+++ b/roles/02-ceph-preconfig/tasks/main.yml
@@ -44,7 +44,7 @@
     remote_user: root
     state: present
     key: "{{ lookup('file', '/root/.ssh/id_rsa.pub') }}"
-  with_items: "{{groups['all']}}"
+#  with_items: "{{groups['all']}}"
 
 #- name: run ssh-keyscan to add keys to known_hosts
 #  shell: "ssh-keyscan {{ item }} >> ~/.ssh/known_hosts"
