--- a/roles/05-ceph-monitor-config/tasks/main.yml
+++ b/roles/05-ceph-monitor-config/tasks/main.yml
@@ -48,13 +48,8 @@
 - name: Start ceph-mon service
   systemd:
     state: started
+    enabled: true
     name: ceph-mon@{{inventory_hostname}}
-
-- name: enable ceph-mon service
-  systemd:
-    state: enabled
-    name: ceph-mon@{{inventory_hostname}}
-
 
 # 17、查看集群情况
 - name: produce done file
