--- a/roles/08-ceph-deploy/tasks/main.yml
+++ b/roles/08-ceph-deploy/tasks/main.yml
@@ -5,12 +5,18 @@
     state: directory
     mode: 0755
 
-- name: install ceph on all nodes
-  shell: ceph-deploy install "{{ item }}"
-  with_items: "{{groups['mon']}}"
-  args:
-    chdir: ~/ceph
+- name: add Ceph yum repository
+  copy:
+    src: ceph.conf
+    dest: ~/ceph/ceph.conf
+    mode: 0644
 
+#- name: install ceph on all nodes
+#  shell: ceph-deploy install "{{ item }}"
+#  with_items: "{{groups['mon']}}"
+#  args:
+#    chdir: ~/ceph
+#
 - name: create new cluster
   shell: ceph-deploy new node1 node2 node3
   with_items: "{{groups['mon']}}"
