--- a/roles/31-remove-ceph/tasks/main.yml
+++ b/roles/31-remove-ceph/tasks/main.yml
@@ -1,21 +1,21 @@
----
-- name: delete osd disk partition
-  shell: ceph-deploy disk zap "{{item}}":sdb
-  with_items: "{{groups['osd']}}"
-  args:
-    chdir: ~/cluster
+#---
+#- name: delete osd disk partition
+#  shell: ceph-deploy disk zap "{{item}}":sdb
+#  with_items: "{{groups['osd']}}"
+#  args:
+#    chdir: ~/ceph
 
 - name: purge node
   shell: ceph-deploy purge "{{ item }}"
   with_items: "{{groups['osd']}}"
   args:
-    chdir: ~/cluster
+    chdir: ~/ceph
 
 - name: purge node data
   shell: ceph-deploy purgedata "{{ item }}"
   with_items: "{{groups['osd']}}"
   args:
-    chdir: ~/cluster
+    chdir: ~/ceph
 
 - name: remove keys
   shell: ceph-deploy forgetkeys
@@ -28,4 +28,4 @@
   with_fileglob:
     - ceph.*
   args:
-    chdir: ~/cluster
+    chdir: ~/ceph
