--- a/roles/07-ssh-config/tasks/main.yml
+++ b/roles/07-ssh-config/tasks/main.yml
@@ -19,7 +19,7 @@
     path: ~/.ssh/known_hosts
 - name: run ssh-keyscan to add keys to known_hosts
   shell: "ssh-keyscan {{ item }} >> ~/.ssh/known_hosts"
-  with_items: "{{groups['mon']}}"
+  with_items: "{{groups['all']}}"
 #    - "node1"
 #    - "node2"
 #    - "node3"
