--- a/roles/08-ceph-deploy/tasks/main.yml
+++ b/roles/08-ceph-deploy/tasks/main.yml
@@ -18,7 +18,7 @@
 #    chdir: ~/ceph
 #
 - name: create new cluster
-  shell: ceph-deploy new node1 node2 node3
+  shell: ceph-deploy new {{ item }}
   with_items: "{{groups['mon']}}"
   args:
     chdir: ~/ceph
