--- a/roles/09-cephfs-mount/vars/main.yml
+++ b/roles/09-cephfs-mount/vars/main.yml
@@ -1,5 +1,5 @@
 cephfs_endpoint: node1:6789:/
 cephfs_mountpoint: /mnt/cephfs
 cephfs_user: admin
-cephfs_secret: o9238jf9ajsdfje3jf9je==
+cephfs_secret: AQATSKdNGBnwLhAAnNDKnH65FmVKpXZJVasUeQ==
 cephfs_secret_file_prefix: node1
