--- a/roles/09-cephfs-mount/tasks/main.yml
+++ b/roles/09-cephfs-mount/tasks/main.yml
@@ -32,8 +32,14 @@
   register: _mount
   ignore_errors: yes
 
+#- name: mount cephfs by kernel
+#  shell: "mount.ceph {{ cephfs_endpoint }} {{ cephfs_mountpoint }} -o name={{ cephfs_user }},secretfile=/etc/ceph/{{ cephfs_secret_file_prefix }}.{{ cephfs_user }}.secret"
+#  when:
+#    - _mount.rc == 1
+#    - ansible_kernel | match('^4.*')
+
 - name: mount cephfs by kernel
-  shell: "mount.ceph {{ cephfs_endpoint }} {{ cephfs_mountpoint }} -o name={{ cephfs_user }},secretfile=/etc/ceph/{{ cephfs_secret_file_prefix }}.{{ cephfs_user }}.secret"
+  shell: "mount -t ceph {{ cephfs_endpoint }} {{ cephfs_mountpoint }} -o name={{ cephfs_user }},secretfile=/etc/ceph/{{ cephfs_secret_file_prefix }}.{{ cephfs_user }}.secret"
   when:
     - _mount.rc == 1
     - ansible_kernel | match('^4.*')
