--- a/roles/08-ceph-deploy/files/ceph.conf
+++ b/roles/08-ceph-deploy/files/ceph.conf
@@ -1,8 +1,8 @@
 [global]
 fsid = 62d31c7d-780f-40c3-9180-dbe1f7c5d508
-mon initial members = node1, node2, node3
-mon host = 192.168.2.21, 192.168.2.22, 192.168.2.23
-public network = 192.168.2.0/24
+mon_initial members = node1, node2, node3
+mon_host = 192.168.2.21, 192.168.2.22, 192.168.2.23
+public_network = 192.168.2.0/24
 auth cluster required = cephx
 auth service required = cephx
 auth client required = cephx
