--- a/roles/08-ceph-deploy/tasks/main.yml
+++ b/roles/08-ceph-deploy/tasks/main.yml
@@ -11,11 +11,11 @@
     dest: ~/ceph/ceph.conf
     mode: 0644
 
-#- name: install ceph on all nodes
-#  shell: ceph-deploy install "{{ item }}"
-#  with_items: "{{groups['mon']}}"
-#  args:
-#    chdir: ~/ceph
+- name: install ceph on all nodes
+  shell: ceph-deploy install "{{ item }}"
+  with_items: "{{groups['mon']}}"
+  args:
+    chdir: ~/ceph
 
 - name: create new cluster
   shell: ceph-deploy --ceph-conf ceph.conf new node1 node2 node3
