--- a/roles/01-install-packages/tasks/main.yml
+++ b/roles/01-install-packages/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: add Ceph yum repository
   copy:
-    src: ceph.repo.old
+    src: ceph.repo
     dest: /etc/yum.repos.d/ceph.repo
     mode: 0644
 
